--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^7.8.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
